src/test/ui/resolve/privacy-struct-ctor.stderr
error[E0423]: expected value, found struct `Z`
  --> $DIR/privacy-struct-ctor.rs:20:9
   |
LL |         Z;
   |         ^
   |         |
   |         constructor is not visible here due to private fields
   |         help: a tuple struct with a similar name exists: `S`

error[E0423]: expected value, found struct `S`
  --> $DIR/privacy-struct-ctor.rs:33:5
   |
LL |     S;
   |     ^ constructor is not visible here due to private fields

error[E0423]: expected value, found struct `S2`
  --> $DIR/privacy-struct-ctor.rs:38:5
   |
LL |     S2;
   |     ^^ did you mean `S2 { /* fields */ }`?

error[E0423]: expected value, found struct `xcrate::S`
  --> $DIR/privacy-struct-ctor.rs:43:5
   |
LL |     xcrate::S;
   |     ^^^^^^^^^ constructor is not visible here due to private fields
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use m::S;
   |

error[E0603]: tuple struct `Z` is private
  --> $DIR/privacy-struct-ctor.rs:18:12
   |
LL |         n::Z;
   |            ^

error[E0603]: tuple struct `S` is private
  --> $DIR/privacy-struct-ctor.rs:29:8
   |
LL |     m::S;
   |        ^

error[E0603]: tuple struct `S` is private
  --> $DIR/privacy-struct-ctor.rs:31:19
   |
LL |     let _: S = m::S(2);
   |                   ^

error[E0603]: tuple struct `Z` is private
  --> $DIR/privacy-struct-ctor.rs:35:11
   |
LL |     m::n::Z;
   |           ^

error[E0603]: tuple struct `S` is private
  --> $DIR/privacy-struct-ctor.rs:41:16
   |
LL |     xcrate::m::S;
   |                ^

error[E0603]: tuple struct `Z` is private
  --> $DIR/privacy-struct-ctor.rs:45:19
   |
LL |     xcrate::m::n::Z;
   |                   ^

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0423, E0603.
For more information about an error, try `rustc --explain E0423`.
